prevent overflow in x direction

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,7 @@
 body {
 	background-color: #222;
 	height: 100vh;
+	overflow-x: hidden;
 }
 
 div {
